--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "chess.js": "^1.0.0-alpha.0",
+    "chessboard-element": "^1.2.0",
+    "chessboardjsx": "^2.4.7",
     "react": "^18.2.0",
+    "react-chessboard": "^1.3.0",
+    "react-chessground": "^1.5.0",
+    "react-compound-timer": "^1.1.4",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "tally-marks": "^1.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
